# swiftVCPKG

./: CMakeLists.txt  cmake_build.sh  error_highlighter.py  fast_build.sh  full_build.sh
sources/: Utils.swift  ecs.swift  main.swift
sources/ecs/: Component.swift  ComponentStorage.swift  StorageSets.swift  ecs.swift
sources/rendering/: frustum.swift
sources/rendering/shaders/: lightmap.fs  lightmap.vs  shadow.fs  shadow.vs
sources/tests/: frustumTest.swift  shadowMapTest.swift
